config-lib cleanup, no functional changes